Add - Tool tips, display text, Texture and change recipe of Ring of Growth Change - the Ring of Growth can reset the breed waiting - README.md

--- a/src/main/resources/assets/oreharvest/lang/en_us.json
+++ b/src/main/resources/assets/oreharvest/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.oreharvest.ring_basic": "Basic Ring",
   "item.oreharvest.ring_natural": "Ring Of Natural",
   "item.oreharvest.ring_attraction": "Ring Of Attraction",
+  "item.oreharvest.ring_growth": "Ring Of Growth",
   "item.oreharvest.tool_hoe_natural": "Hoe Of Natural",
   "block.oreharvest.chest_attraction": "Chest Of Attraction",
   "block.oreharvest.chest_natural": "Chest Of Natural",
@@ -13,6 +14,7 @@
   "item.tooltip.ring_natural.1": "Growth crops in the fastest way",
   "item.tooltip.ring_natural.2": "Activate in main hand",
   "item.tooltip.ring_attraction": "Attract drops to your inventory",
+  "item.tooltip.ring_growth": "Growth nearby animals",
   "item.tooltip.tool_hoe_natural.1": "Growth crops in the fastest way",
   "item.tooltip.tool_hoe_natural.2": "Activate in main hand",
   "item.tooltip.tool_hoe_natural.3": "Harvest nearby crops when use",
